added content, edited footer to include icons

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css\custom.css">
+    <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous"></script>
   </head>
     <body>
 <main>
 <!-- BOOTSTRAP CODE -->
 <!-- !! CONTAINER !! -->
     <div class="container">
-
 <!-- NAV/ROW 1 START -->
       <div class="row main-nav mb-5">
         <div class=" logotype col-md-3" tabindex="0">
@@ -44,7 +44,7 @@
         <div class="col-lg-5 pr-5 col-index-text">
           <div class="index-text-container">
             <h1>Hello,</h1>
-            <p>I'm a user experience researcher and people nerd who's all about collaborative, problem-oriented research. My specialties include product development, service design, and business consulting. I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents. When I'm not researching or consulting, I'm sipping water and watching soap operas. Wanna chat? Email me at liz.alma.brown@gmail.com. </p>
+            <p>I'm a user experience researcher and people nerd who's all about collaborative, problem-oriented research. My specialties include product development, service design, and business consulting.</p>I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents. <p>When I'm not researching or consulting, I'm sipping water and watching soap operas. </p> </p>Wanna chat? Email me at <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a></p>
           </div>
         </div>
         <div class="col-1">
@@ -61,37 +61,38 @@
         <div class="col">
             <h2>Work</h2>
         </div>
+        <!-- break column -->
         <div class="w-100"></div>
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go moduel</a>
+              <h5 class="card-title">MONOTYPE</h5>
+              <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
+              <a href="#" class="btn btn-primary">Font more?</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">MAKE-A-THON</h5>
+              <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
+              <a href="#" class="btn btn-primary">How we won</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">BABY BRACKET</h5>
+              <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
+              <a href="#" class="btn btn-primary">Meet our baby</a>
             </div>
           </div>
         </div>
       </div>
 <!-- WORK/ROW 3 END -->
-<!-- EDUCATION/ROW 4 START -->
+<!-- STUDY/ROW 4 START -->
       <div class="row">
         <div class="col">
           <h2>Study</h2>
@@ -102,7 +103,7 @@
           <p>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014</p>
         </div>
       </div>
-<!-- EDUCATION/ROW 4 END -->
+<!-- STUDY/ROW 4 END -->
 <!-- TLDR/ROW 4 START -->
       <div class="row">
         <div class="col">
@@ -114,14 +115,19 @@
         </div>
       </div>
 <!-- TLDR/ROW 4 END -->
-<!-- END OF MAIN -->
 </main>
+<!-- END OF MAIN -->
 <!-- FOOTER -->
   <footer class="footer">
-    <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p>
-    <a href="index.html">ABOUT</a>
-    <a href="all-projects.html">WORK</a>
-    <a href="files\resume.PDF" target="_blank" >RESUME</a>
+
+    <div class="icon-container">
+
+      <a href="https://www.linkedin.com/in/elizabeth-alma-brown/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
+      <a href="https://medium.com/@liz.alma.brown" target="_blank" class="fab fa-medium-m fa-2x"></a>
+      <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
+      <p>© 2020 Built by uxliz</p>
+    </div>
+
   </footer>
 <!-- END OF FOOTER -->
 
