--- a/index.html
+++ b/index.html
@@ -18,40 +18,45 @@
 <!-- !! CONTAINER !! -->
     <div class="container">
 <!-- NAV/ROW 1 START -->
-      <div class="row main-nav mb-5">
-        <div class=" logotype col-md-3" tabindex="0">
-          <a href="index.html">
-          <img class="logotype-img" src="images\logo-type-alt-3.PNG" alt=""></a>
+    <div class="row main-nav mb-5">
+      <div class="logotype col-md-3" tabindex="0">
+        <a href="index.html">
+        <img class="logotype-img" src="images\logotype.PNG" alt="">
+        <!-- <img class="logotype-img" src="images\logotype.gif" alt=""> -->
+      </a>
+      </div>
+      <div class="col-7">
+        <!-- empty col -->
+      </div>
+      <div class="col-nav-links col-2">
+        <div class=""tabindex="0">
+          <a class="main-nav-link" href="index.html ">ABOUT</a>
         </div>
-        <div class="col-7">
-
+        <div class=""tabindex="0">
+          <a class="main-nav-link" href="all-projects.html">WORK</a>
         </div>
-        <div class="col-nav-links col-2">
-          <div class=""tabindex="0">
-            <a class="main-nav-link" href="index.html ">ABOUT</a>
-          </div>
-          <div class=""tabindex="0">
-            <a class="main-nav-link" href="all-projects.html">WORK</a>
-          </div>
-          <div class=""tabindex="0">
-            <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
-          </div>
+        <div class=""tabindex="0">
+          <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
         </div>
       </div>
+    </div>
 <!-- NAV/ROW 1 END -->
 <!-- ABOUT/ROW 2 START -->
       <div class="row">
-        <div class="col-lg-5 pr-5 col-index-text">
+        <div class="col-lg-6 col-index-text">
           <div class="index-text-container">
             <h1>Hello,</h1>
-            <p>I'm a user experience researcher and people nerd who's all about collaborative, problem-oriented research. My specialties include product development, service design, and business consulting.</p>I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents. <p>When I'm not researching or consulting, I'm sipping water and watching soap operas. </p> </p>Wanna chat? Email me at <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a></p>
+            <p>I'm a user experience researcher and people nerd who's all about collaborative, problem-oriented research. My specialties include product development, service design, and business consulting.</p>
+            <p>I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.</p>
+            <p>When I'm not researching or consulting, I'm sipping water and watching soap operas.</p>
+            <p>Wanna chat? Email me at <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a></p>
           </div>
         </div>
         <div class="col-1">
         <!-- empty col/gutter -->
         </div>
         <!-- hero image -->
-        <div class="col-lg-6">
+        <div class="col-lg-5">
           <img class="index-img"src="images\image.JPG" alt="">
         </div>
       </div>
@@ -68,7 +73,10 @@
             <div class="card-body">
               <h5 class="card-title">MONOTYPE</h5>
               <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
-              <a href="#" class="btn btn-primary">Font more?</a>
+              <a href="index.html" class="btn" tabindex="0">Font more?</a>
+            </div>
+            <div class="card-footer">
+              <span class="badge badge-pill badge-info">Info</span>
             </div>
           </div>
         </div>
@@ -77,7 +85,10 @@
             <div class="card-body">
               <h5 class="card-title">MAKE-A-THON</h5>
               <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
-              <a href="#" class="btn btn-primary">How we won</a>
+              <a href="#" class="btn">How we won</a>
+            </div>
+            <div class="card-footer">
+              <span class="badge badge-pill badge-info">Info</span>
             </div>
           </div>
         </div>
@@ -86,7 +97,10 @@
             <div class="card-body">
               <h5 class="card-title">BABY BRACKET</h5>
               <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
-              <a href="#" class="btn btn-primary">Meet our baby</a>
+              <a href="#" class="btn">Meet our baby</a>
+            </div>
+            <div class="card-footer">
+              <span class="badge badge-pill badge-info">Info</span>
             </div>
           </div>
         </div>
@@ -120,12 +134,15 @@
 <!-- FOOTER -->
   <footer class="footer">
 
-    <div class="icon-container">
+    <div class=" container">
+      <div class=" icon-container">
+
 
       <a href="https://www.linkedin.com/in/elizabeth-alma-brown/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
       <a href="https://medium.com/@liz.alma.brown" target="_blank" class="fab fa-medium-m fa-2x"></a>
       <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
-      <p>© 2020 Built by uxliz</p>
+      <p class="footer-p">© 2020 Built by uxliz</p>
+      </div>
     </div>
 
   </footer>
