--- a/index.html
+++ b/index.html
@@ -13,123 +13,167 @@
     <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous"></script>
   </head>
     <body>
-<main>
-<!-- BOOTSTRAP CODE -->
-<!-- !! CONTAINER !! -->
-    <div class="container">
-<!-- NAV/ROW 1 START -->
-    <div class="row main-nav mb-5">
-      <div class="logotype col-md-3" tabindex="0">
-        <a href="index.html">
-        <img class="logotype-img" src="images\logotype.PNG" alt="">
-        <!-- <img class="logotype-img" src="images\logotype.gif" alt=""> -->
-      </a>
-      </div>
-      <div class="col-7">
+<!-- NAV START -->
+      <div class="row main-nav pb-2">
+        <div class="logotype col-md-2" tabindex="0">
+          <a href="index.html">
+            <img class="logotype-img" src="images\logotype.PNG" alt="">
+          </a>
+        </div>
         <!-- empty col -->
-      </div>
-      <div class="col-nav-links col-2">
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="index.html ">ABOUT</a>
+        <div class="col-9">
         </div>
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="all-projects.html">WORK</a>
-        </div>
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
-        </div>
-      </div>
-    </div>
-<!-- NAV/ROW 1 END -->
-<!-- ABOUT/ROW 2 START -->
-      <div class="row">
-        <div class="col-lg-6 col-index-text">
-          <div class="index-text-container">
-            <h1>Hello,</h1>
-            <p>I'm a user experience researcher and people nerd who's all about collaborative, problem-oriented research. My specialties include product development, service design, and business consulting.</p>
-            <p>I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.</p>
-            <p>When I'm not researching or consulting, I'm sipping water and watching soap operas.</p>
-            <p>Wanna chat? Email me at <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a></p>
+        <!-- nav col -->
+        <div class="col-nav-links col-1">
+          <div class=""tabindex="0">
+            <a class="main-nav-link" href="index.html ">ABOUT</a>
           </div>
-        </div>
-        <div class="col-1">
-        <!-- empty col/gutter -->
-        </div>
-        <!-- hero image -->
-        <div class="col-lg-5">
-          <img class="index-img"src="images\image.JPG" alt="">
-        </div>
-      </div>
-<!-- ABOUT/ROW 2 END -->
-<!-- WORK/ROW 3 START -->
-      <div class="row">
-        <div class="col">
-            <h2>Work</h2>
-        </div>
-        <!-- break column -->
-        <div class="w-100"></div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">MONOTYPE</h5>
-              <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
-              <a href="index.html" class="btn" tabindex="0">Font more?</a>
-            </div>
-            <div class="card-footer">
-              <span class="badge badge-pill badge-info">Info</span>
-            </div>
+          <div class=""tabindex="0">
+            <a class="main-nav-link" href="all-projects.html">WORK</a>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">MAKE-A-THON</h5>
-              <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
-              <a href="#" class="btn">How we won</a>
-            </div>
-            <div class="card-footer">
-              <span class="badge badge-pill badge-info">Info</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">BABY BRACKET</h5>
-              <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
-              <a href="#" class="btn">Meet our baby</a>
-            </div>
-            <div class="card-footer">
-              <span class="badge badge-pill badge-info">Info</span>
-            </div>
+          <div class=""tabindex="0">
+            <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
           </div>
         </div>
       </div>
-<!-- WORK/ROW 3 END -->
-<!-- STUDY/ROW 4 START -->
-      <div class="row">
-        <div class="col">
-          <h2>Study</h2>
+<!-- NAV END -->
+<!-- MAIN START -->
+      <main>
+<!--CONTAINER START -->
+        <div class="container">
+<!-- ABOUTROW START -->
+          <div class="row">
+            <div class="col-lg-6 col-index-text">
+              <div class="index-text-container">
+                <h1 class="mb-4">
+                  Hello.
+                </h1>
+                <h2 class="mb-4">
+                  I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
+                </h2>
+                <p class="about-p">
+                  I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.
+                </p>
+                <p class="about-p">
+                  When I'm not researching or consulting, I'm sipping water and watching soap operas.
+                </p>
+                <p class="about-p">
+                  Wanna chat? Email me at
+                  <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com
+                  </a>
+                </p>
+              </div>
+            </div>
+            <!-- hero image -->
+            <div class="col-lg-6">
+              <img class="index-img"src="images\image.JPG" alt="">
+            </div>
+          </div>
+<!-- ABOUTROW END -->
+<!-- WORKROW START -->
+          <div class="row mt-5">
+            <div class="col">
+              <h2>Work</h2>
+            </div>
+            <!-- break column -->
+            <div class="w-100">
+            </div>
+            <!-- monotype column -->
+            <div class="col-sm-4">
+              <!-- monotype card -->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">MONOTYPE</h5>
+                  <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
+                  <a href="index.html" class="btn" tabindex="0">Font more?</a>
+                </div>
+                <div class="card-footer mt-2">
+                  <span class="badge badge-pill badge-info">Service Design</span>
+                  <span class="badge badge-pill badge-info">UX Research</span>
+                  <span class="badge badge-pill badge-info">SaaS</span>
+                  <span class="badge badge-pill badge-info">3 Months</span>
+                  <span class="badge badge-pill badge-info">User Interviews</span>
+                  <span class="badge badge-pill badge-info">Service Mapping</span>
+                  <span class="badge badge-pill badge-info">Customer Journeys</span>
+                </div>
+              </div>
+            </div>
+            <!-- makeaton column start -->
+            <div class="col-sm-4">
+              <!-- makeathon card -->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">MAKE-A-THON</h5>
+                  <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
+                  <a href="#" class="btn">How we won</a>
+                </div>
+                <div class="card-footer mt-2">
+                  <span class="badge badge-pill badge-info">UX Research</span>
+                  <span class="badge badge-pill badge-info">Pitching</span>
+                  <span class="badge badge-pill badge-info">Digital Mock-up</span>
+                  <span class="badge badge-pill badge-info">36 Hours</span>
+                  <span class="badge badge-pill badge-info">User Interviews</span>
+
+                </div>
+              </div>
+            </div>
+            <!-- babybracket column start -->
+            <div class="col-sm-4">
+              <!-- babybracket card -->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">BABY BRACKET</h5>
+                  <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
+                  <a href="#" class="btn">Meet our baby</a>
+                </div>
+                <div class="card-footer mt-2">
+                  <span class="badge badge-pill badge-info">UX Research</span>
+                  <span class="badge badge-pill badge-info">UX Design</span>
+                  <span class="badge badge-pill badge-info">iOS MVP</span>
+                  <span class="badge badge-pill badge-info">4 Months</span>
+                  <span class="badge badge-pill badge-info">User Interviews</span>
+                  <span class="badge badge-pill badge-info">Customer Journeys</span>
+                  <span class="badge badge-pill badge-info">Surveys</span>
+                </div>
+              </div>
+            </div>
+          </div>
+<!-- WORKROW  END -->
+<!-- STUDYROW  START -->
+          <div class="row mt-5">
+            <div class="col">
+              <h2>
+                Study
+              </h2>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col">
+              <p>
+                M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020<br>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014
+              </p>
+            </div>
+          </div>
+<!-- STUDYROW  END -->
+<!-- TLDRROW  START -->
+          <div class="row mt-5">
+            <div class="col">
+              <h2>
+                TL;DR
+              </h2>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col">
+              <p>
+                I'm a UX researcher who builds enjoyable digital experiences.
+              </p>
+            </div>
+          </div>
+<!-- TLDRROW  END -->
+<!-- CONTAINER END -->
         </div>
-        <div class="w-100"></div>
-        <div class="col">
-          <p>M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020</p>
-          <p>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014</p>
-        </div>
-      </div>
-<!-- STUDY/ROW 4 END -->
-<!-- TLDR/ROW 4 START -->
-      <div class="row">
-        <div class="col">
-          <h2>TL;DR</h2>
-        </div>
-        <div class="w-100"></div>
-        <div class="col">
-          <p>I'm a UX researcher who builds enjoyable digital experiences.</p>
-        </div>
-      </div>
-<!-- TLDR/ROW 4 END -->
-</main>
+      </main>
 <!-- END OF MAIN -->
 <!-- FOOTER -->
   <footer class="footer">
