--- a/index.html
+++ b/index.html
@@ -2,199 +2,196 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-
+    <title>Elizabeth Brown UX Researcher and Consultant</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css\custom.css">
-    <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous">
+    </script>
   </head>
-    <body>
-<!-- NAV START -->
-      <div class="row main-nav pb-2">
-        <div class="logotype col-md-2" tabindex="0">
-          <a href="index.html">
-            <img class="logotype-img" src="images\logotype.PNG" alt="">
-          </a>
-        </div>
-        <!-- empty col -->
-        <div class="col-9">
-        </div>
-        <!-- nav col -->
-        <div class="col-nav-links col-1">
-          <div class=""tabindex="0">
-            <a class="main-nav-link" href="index.html ">ABOUT</a>
-          </div>
-          <div class=""tabindex="0">
-            <a class="main-nav-link" href="all-projects.html">WORK</a>
-          </div>
-          <div class=""tabindex="0">
-            <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
-          </div>
-        </div>
+  <body>
+    <!-- NAV -->
+    <div class="row main-nav pb-2">
+      <div class="logotype col-md-2" tabindex="0">
+        <a href="index.html">
+          <img class="logotype-img" src="images\logotype.PNG" alt="">
+        </a>
       </div>
-<!-- NAV END -->
-<!-- MAIN START -->
-      <main>
-<!--CONTAINER START -->
-        <div class="container">
-<!-- ABOUTROW START -->
-          <div class="row">
-            <div class="col-lg-6 col-index-text">
-              <div class="index-text-container">
-                <h1 class="mb-4">
-                  Hello.
-                </h1>
-                <h2 class="mb-4">
-                  I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
-                </h2>
-                <p class="about-p">
-                  I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.
-                </p>
-                <p class="about-p">
-                  When I'm not researching or consulting, I'm sipping water and watching soap operas.
-                </p>
-                <p class="about-p">
-                  Wanna chat? Email me at
-                  <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com
-                  </a>
-                </p>
-              </div>
-            </div>
-            <!-- hero image -->
-            <div class="col-lg-6">
-              <img class="index-img"src="images\image.JPG" alt="">
-            </div>
-          </div>
-<!-- ABOUTROW END -->
-<!-- WORKROW START -->
-          <div class="row mt-5">
-            <div class="col">
-              <h2>Work</h2>
-            </div>
-            <!-- break column -->
-            <div class="w-100">
-            </div>
-            <!-- monotype column -->
-            <div class="col-sm-4">
-              <!-- monotype card -->
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">MONOTYPE</h5>
-                  <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
-                  <a href="index.html" class="btn" tabindex="0">Font more?</a>
-                </div>
-                <div class="card-footer mt-2">
-                  <span class="badge badge-pill badge-info">Service Design</span>
-                  <span class="badge badge-pill badge-info">UX Research</span>
-                  <span class="badge badge-pill badge-info">SaaS</span>
-                  <span class="badge badge-pill badge-info">3 Months</span>
-                  <span class="badge badge-pill badge-info">User Interviews</span>
-                  <span class="badge badge-pill badge-info">Service Mapping</span>
-                  <span class="badge badge-pill badge-info">Customer Journeys</span>
-                </div>
-              </div>
-            </div>
-            <!-- makeaton column start -->
-            <div class="col-sm-4">
-              <!-- makeathon card -->
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">MAKE-A-THON</h5>
-                  <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
-                  <a href="#" class="btn">How we won</a>
-                </div>
-                <div class="card-footer mt-2">
-                  <span class="badge badge-pill badge-info">UX Research</span>
-                  <span class="badge badge-pill badge-info">Pitching</span>
-                  <span class="badge badge-pill badge-info">Digital Mock-up</span>
-                  <span class="badge badge-pill badge-info">36 Hours</span>
-                  <span class="badge badge-pill badge-info">User Interviews</span>
-
-                </div>
-              </div>
-            </div>
-            <!-- babybracket column start -->
-            <div class="col-sm-4">
-              <!-- babybracket card -->
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">BABY BRACKET</h5>
-                  <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
-                  <a href="#" class="btn">Meet our baby</a>
-                </div>
-                <div class="card-footer mt-2">
-                  <span class="badge badge-pill badge-info">UX Research</span>
-                  <span class="badge badge-pill badge-info">UX Design</span>
-                  <span class="badge badge-pill badge-info">iOS MVP</span>
-                  <span class="badge badge-pill badge-info">4 Months</span>
-                  <span class="badge badge-pill badge-info">User Interviews</span>
-                  <span class="badge badge-pill badge-info">Customer Journeys</span>
-                  <span class="badge badge-pill badge-info">Surveys</span>
-                </div>
-              </div>
-            </div>
-          </div>
-<!-- WORKROW  END -->
-<!-- STUDYROW  START -->
-          <div class="row mt-5">
-            <div class="col">
-              <h2>
-                Study
-              </h2>
-            </div>
-            <div class="w-100">
-            </div>
-            <div class="col">
-              <p>
-                M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020<br>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014
-              </p>
-            </div>
-          </div>
-<!-- STUDYROW  END -->
-<!-- TLDRROW  START -->
-          <div class="row mt-5">
-            <div class="col">
-              <h2>
-                TL;DR
-              </h2>
-            </div>
-            <div class="w-100">
-            </div>
-            <div class="col">
-              <p>
-                I'm a UX researcher who builds enjoyable digital experiences.
-              </p>
-            </div>
-          </div>
-<!-- TLDRROW  END -->
-<!-- CONTAINER END -->
+      <!-- empty col -->
+      <div class="col-9">
+      </div>
+      <!-- nav col -->
+      <div class="col-nav-links col-1">
+        <div class=""tabindex="0">
+          <a class="main-nav-link" href="index.html ">ABOUT</a>
         </div>
-      </main>
-<!-- END OF MAIN -->
-<!-- FOOTER -->
-  <footer class="footer">
-
-    <div class=" container">
-      <div class=" icon-container">
-
-
-      <a href="https://www.linkedin.com/in/elizabeth-alma-brown/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
-      <a href="https://medium.com/@liz.alma.brown" target="_blank" class="fab fa-medium-m fa-2x"></a>
-      <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
-      <p class="footer-p">© 2020 Built by uxliz</p>
+        <div class=""tabindex="0">
+          <a class="main-nav-link" href="all-projects.html">WORK</a>
+        </div>
+        <div class=""tabindex="0">
+          <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
+        </div>
       </div>
     </div>
+    <!-- NAV END -->
+    <!-- MAIN -->
+    <main>
+      <!--CONTAINER -->
+      <div class="container">
+        <!-- ABOUT -->
+        <div class="row">
+          <div class="col-lg-6 col-index-text">
+            <div class="index-text-container">
+              <h1 class="mb-4">
+                Hello.
+              </h1>
+              <h2 class="mb-4">
+                I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
+              </h2>
+              <p class="about-p">
+                I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.
+              </p>
+              <p class="about-p">
+                When I'm not researching or consulting, I'm sipping water and watching soap operas.
+              </p>
+              <p class="about-p">
+                Wanna chat? Email me at
+                <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com
+                </a>
+              </p>
+            </div>
+          </div>
+          <!-- hero image -->
+          <div class="col-lg-6">
+            <img class="index-img"src="images\image.JPG" alt="">
+          </div>
+        </div>
+        <!-- ABOUT END -->
+        <!-- WORK -->
+        <div class="row mt-5">
+          <div class="col">
+            <h2>Work</h2>
+          </div>
+          <!-- break column -->
+          <div class="w-100">
+          </div>
+          <!-- monotype column -->
+          <div class="col-sm-4">
+            <!-- monotype card -->
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">MONOTYPE</h5>
+                <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
+                <a href="index.html" class="btn" tabindex="0">Font more?</a>
+              </div>
+              <div class="card-footer mt-2">
+                <span class="badge badge-pill badge-info">Service Design</span>
+                <span class="badge badge-pill badge-info">UX Research</span>
+                <span class="badge badge-pill badge-info">SaaS</span>
+                <span class="badge badge-pill badge-info">3 Months</span>
+                <span class="badge badge-pill badge-info">User Interviews</span>
+                <span class="badge badge-pill badge-info">Service Mapping</span>
+                <span class="badge badge-pill badge-info">Customer Journeys</span>
+              </div>
+            </div>
+          </div>
+          <!-- makeaton column start -->
+          <div class="col-sm-4">
+            <!-- makeathon card -->
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">MAKE-A-THON</h5>
+                <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
+                <a href="#" class="btn">How we won</a>
+              </div>
+              <div class="card-footer mt-2">
+                <span class="badge badge-pill badge-info">UX Research</span>
+                <span class="badge badge-pill badge-info">Pitching</span>
+                <span class="badge badge-pill badge-info">Digital Mock-up</span>
+                <span class="badge badge-pill badge-info">36 Hours</span>
+                <span class="badge badge-pill badge-info">User Interviews</span>
 
-  </footer>
-<!-- END OF FOOTER -->
-
-<!-- SCRIPT CODE -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+              </div>
+            </div>
+          </div>
+          <!-- babybracket column start -->
+          <div class="col-sm-4">
+            <!-- babybracket card -->
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">BABY BRACKET</h5>
+                <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
+                <a href="#" class="btn">Meet our baby</a>
+              </div>
+              <div class="card-footer mt-2">
+                <span class="badge badge-pill badge-info">UX Research</span>
+                <span class="badge badge-pill badge-info">UX Design</span>
+                <span class="badge badge-pill badge-info">iOS MVP</span>
+                <span class="badge badge-pill badge-info">4 Months</span>
+                <span class="badge badge-pill badge-info">User Interviews</span>
+                <span class="badge badge-pill badge-info">Customer Journeys</span>
+                <span class="badge badge-pill badge-info">Surveys</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- WORK END -->
+        <!-- STUDY -->
+        <div class="row mt-5">
+          <div class="col">
+            <h2>
+              Study
+            </h2>
+          </div>
+          <div class="w-100">
+          </div>
+          <div class="col">
+            <p>
+              M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020<br>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014
+            </p>
+          </div>
+        </div>
+        <!-- STUDY END -->
+        <!-- TLDR -->
+        <div class="row mt-5">
+          <div class="col">
+            <h2>
+              TL;DR
+            </h2>
+          </div>
+          <div class="w-100">
+          </div>
+          <div class="col">
+            <p>
+              I'm a UX researcher who builds enjoyable digital experiences.
+            </p>
+          </div>
+        </div>
+        <!-- TLDR END -->
+        <!-- CONTAINER END -->
+      </div>
+    </main>
+    <!-- END OF MAIN -->
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class=" container">
+        <div class=" icon-container">
+        <a href="https://www.linkedin.com/in/elizabeth-alma-brown/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
+        <a href="https://medium.com/@liz.alma.brown" target="_blank" class="fab fa-medium-m fa-2x"></a>
+        <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
+        <p class="footer-p">© 2020 Built by uxliz</p>
+        </div>
+      </div>
+    </footer>
+    <!-- END OF FOOTER -->
+    <!-- SCRIPT -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <!-- SCRIPT END -->
   </body>
 </html>
