moved nav back into main container, added col offets, still learning breakpoints

--- a/index.html
+++ b/index.html
@@ -11,40 +11,38 @@
     </script>
   </head>
   <body>
-    <!-- NAV -->
-    <div class="row main-nav pb-2">
-      <div class="logotype col-md-2" tabindex="0">
-        <a href="index.html">
-          <img class="logotype-img" src="images\logotype.PNG" alt="">
-        </a>
-      </div>
-      <!-- empty col -->
-      <div class="col-9">
-      </div>
-      <!-- nav col -->
-      <div class="col-nav-links col-1">
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="index.html ">ABOUT</a>
-        </div>
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="all-projects.html">WORK</a>
-        </div>
-        <div class=""tabindex="0">
-          <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
-        </div>
-      </div>
-    </div>
-    <!-- NAV END -->
     <!-- MAIN -->
     <main>
       <!--CONTAINER -->
-      <div class="container">
+      <div class="container-fulid">
+        <!-- NAV -->
+        <div class="row main-nav">
+          <!-- logotype -->
+          <div class="logotype col-2" >
+            <a href="index.html" tabindex="0">
+              <img class="logotype-img" src="images\logotype.PNG" alt="">
+            </a>
+          </div>
+          <!-- nav -->
+          <div class="col-nav-links col-1 offset-9">
+            <div class=""tabindex="0">
+              <a class="main-nav-link" href="index.html ">ABOUT</a>
+            </div>
+            <div class=""tabindex="0">
+              <a class="main-nav-link" href="all-projects.html">WORK</a>
+            </div>
+            <div class=""tabindex="0">
+              <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
+            </div>
+          </div>
+        </div>
+        <!-- NAV END -->
         <!-- ABOUT -->
-        <div class="row">
-          <div class="col-lg-6 col-index-text">
+        <div class="row mt-5 pt-5">
+          <div class="col-4 col-index-text offset-2">
             <div class="index-text-container">
               <h1 class="mb-4">
-                Hello.
+              Hello.
               </h1>
               <h2 class="mb-4">
                 I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
@@ -63,21 +61,18 @@
             </div>
           </div>
           <!-- hero image -->
-          <div class="col-lg-6">
+          <div class="col-4">
             <img class="index-img"src="images\image.JPG" alt="">
           </div>
         </div>
         <!-- ABOUT END -->
         <!-- WORK -->
-        <div class="row mt-5">
+        <div class="row mt-5 offset-2">
           <div class="col">
             <h2>Work</h2>
           </div>
-          <!-- break column -->
-          <div class="w-100">
-          </div>
           <!-- monotype column -->
-          <div class="col-sm-4">
+          <div class="col-12 w-100 mt-1">
             <!-- monotype card -->
             <div class="card">
               <div class="card-body">
@@ -96,8 +91,8 @@
               </div>
             </div>
           </div>
-          <!-- makeaton column start -->
-          <div class="col-sm-4">
+          <!-- makeaton column -->
+          <div class="col-12 w-100 mt-5">
             <!-- makeathon card -->
             <div class="card">
               <div class="card-body">
@@ -115,8 +110,8 @@
               </div>
             </div>
           </div>
-          <!-- babybracket column start -->
-          <div class="col-sm-4">
+          <!-- babybracket start -->
+          <div class="col-12 w-100 mt-5">
             <!-- babybracket card -->
             <div class="card">
               <div class="card-body">
@@ -138,7 +133,7 @@
         </div>
         <!-- WORK END -->
         <!-- STUDY -->
-        <div class="row mt-5">
+        <div class="row mt-5 offset-2">
           <div class="col">
             <h2>
               Study
@@ -154,7 +149,7 @@
         </div>
         <!-- STUDY END -->
         <!-- TLDR -->
-        <div class="row mt-5">
+        <div class="row mt-5 offset-2">
           <div class="col">
             <h2>
               TL;DR
