tweaked col sizes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- MAIN -->
     <main>
       <!--CONTAINER -->
-      <div class="container-fulid">
+      <div class="container-fulid main-container">
         <!-- NAV -->
         <div class="row main-nav">
           <!-- logotype -->
@@ -24,7 +24,7 @@
             </a>
           </div>
           <!-- nav -->
-          <div class="col-nav-links col-1 offset-9">
+          <div class="col-nav-links col-2 offset-8">
             <div class=""tabindex="0">
               <a class="main-nav-link" href="index.html ">ABOUT</a>
             </div>
@@ -39,109 +39,107 @@
         <!-- NAV END -->
         <!-- ABOUT -->
         <div class="row mt-5 pt-5">
-          <div class="col-4 col-index-text offset-2">
-            <div class="index-text-container">
-              <h1 class="mb-4">
-              Hello.
-              </h1>
-              <h2 class="mb-4">
-                I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
-              </h2>
-              <p class="about-p">
-                I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.
-              </p>
-              <p class="about-p">
-                When I'm not researching or consulting, I'm sipping water and watching soap operas.
-              </p>
-              <p class="about-p">
-                Wanna chat? Email me at
-                <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com
-                </a>
-              </p>
-            </div>
+          <div class="col-8 col-lg-4 about-container offset-2">
+            <h1 class="about-h1 mb-4">
+            Hello.
+            </h1>
+            <h2 class="about-h2 mb-4">
+              I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
+            </h2>
+            <p class="about-p">
+              I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.
+            </p>
+            <p class="about-p">
+              When I'm not researching or consulting, I'm sipping water and watching soap operas.
+            </p>
+            <p class="about-p">
+              Wanna chat? Email me at
+              <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com
+              </a>
+            </p>
           </div>
           <!-- hero image -->
-          <div class="col-4">
-            <img class="index-img"src="images\image.JPG" alt="">
+          <div class="col-8 col-lg-4 offset-2 offset-lg-0">
+            <img class="about-img"src="images\image.JPG" alt="">
           </div>
         </div>
         <!-- ABOUT END -->
         <!-- WORK -->
         <div class="row mt-5 offset-2">
-          <div class="col">
+          <div class="col-10">
             <h2>Work</h2>
           </div>
-          <!-- monotype column -->
-          <div class="col-12 w-100 mt-1">
+          <!-- Monotype column -->
+          <div class="col-10 w-100 mt-1">
             <!-- monotype card -->
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">MONOTYPE</h5>
+                <h3 class="card-title">MONOTYPE</h3>
                 <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
                 <a href="index.html" class="btn" tabindex="0">Font more?</a>
               </div>
               <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-info">Service Design</span>
-                <span class="badge badge-pill badge-info">UX Research</span>
-                <span class="badge badge-pill badge-info">SaaS</span>
-                <span class="badge badge-pill badge-info">3 Months</span>
-                <span class="badge badge-pill badge-info">User Interviews</span>
-                <span class="badge badge-pill badge-info">Service Mapping</span>
-                <span class="badge badge-pill badge-info">Customer Journeys</span>
+                <span class="badge badge-pill badge-light">Service Design</span>
+                <span class="badge badge-pill badge-light">UX Research</span>
+                <span class="badge badge-pill badge-light">SaaS</span>
+                <span class="badge badge-pill badge-light">3 Months</span>
+                <span class="badge badge-pill badge-light">User Interviews</span>
+                <span class="badge badge-pill badge-light">Service Mapping</span>
+                <span class="badge badge-pill badge-light">Customer Journeys</span>
               </div>
             </div>
           </div>
-          <!-- makeaton column -->
-          <div class="col-12 w-100 mt-5">
+          <!-- Makeaton column -->
+          <div class="col-10 w-100 mt-5">
             <!-- makeathon card -->
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">MAKE-A-THON</h5>
+                <h3 class="card-title">MAKE-A-THON</h3>
                 <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
                 <a href="#" class="btn">How we won</a>
               </div>
               <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-info">UX Research</span>
-                <span class="badge badge-pill badge-info">Pitching</span>
-                <span class="badge badge-pill badge-info">Digital Mock-up</span>
-                <span class="badge badge-pill badge-info">36 Hours</span>
-                <span class="badge badge-pill badge-info">User Interviews</span>
+                <span class="badge badge-pill badge-light">UX Research</span>
+                <span class="badge badge-pill badge-light">Pitching</span>
+                <span class="badge badge-pill badge-light">Digital Mock-up</span>
+                <span class="badge badge-pill badge-light">36 Hours</span>
+                <span class="badge badge-pill badge-light">User Interviews</span>
 
               </div>
             </div>
           </div>
-          <!-- babybracket start -->
-          <div class="col-12 w-100 mt-5">
+          <!-- Babybracket column -->
+          <div class="col-10 w-100 mt-5">
             <!-- babybracket card -->
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">BABY BRACKET</h5>
+                <h3 class="card-title">BABY BRACKET</h3>
                 <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
                 <a href="#" class="btn">Meet our baby</a>
               </div>
               <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-info">UX Research</span>
-                <span class="badge badge-pill badge-info">UX Design</span>
-                <span class="badge badge-pill badge-info">iOS MVP</span>
-                <span class="badge badge-pill badge-info">4 Months</span>
-                <span class="badge badge-pill badge-info">User Interviews</span>
-                <span class="badge badge-pill badge-info">Customer Journeys</span>
-                <span class="badge badge-pill badge-info">Surveys</span>
+                <span class="badge badge-pill badge-light">UX Research</span>
+                <span class="badge badge-pill badge-light">UX Design</span>
+                <span class="badge badge-pill badge-light">iOS MVP</span>
+                <span class="badge badge-pill badge-light">4 Months</span>
+                <span class="badge badge-pill badge-light">User Interviews</span>
+                <span class="badge badge-pill badge-light">Customer Journeys</span>
+                <span class="badge badge-pill badge-light">Surveys</span>
               </div>
             </div>
           </div>
         </div>
         <!-- WORK END -->
         <!-- STUDY -->
-        <div class="row mt-5 offset-2">
-          <div class="col">
+        <div class="row mt-5 offset-2 study-text">
+          <div class="col-12 study-tex">
             <h2>
               Study
             </h2>
           </div>
           <div class="w-100">
           </div>
-          <div class="col">
+          <div class="col-10">
             <p>
               M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020<br>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014
             </p>
@@ -150,14 +148,14 @@
         <!-- STUDY END -->
         <!-- TLDR -->
         <div class="row mt-5 offset-2">
-          <div class="col">
+          <div class="col-12">
             <h2>
               TL;DR
             </h2>
           </div>
           <div class="w-100">
           </div>
-          <div class="col">
+          <div class="col-10">
             <p>
               I'm a UX researcher who builds enjoyable digital experiences.
             </p>
@@ -175,7 +173,7 @@
         <a href="https://www.linkedin.com/in/elizabeth-alma-brown/" class="fab fa-linkedin-in fa-2x" target="_blank"></a>
         <a href="https://medium.com/@liz.alma.brown" target="_blank" class="fab fa-medium-m fa-2x"></a>
         <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" class="far fa-envelope fa-2x" target="_blank"></a>
-        <p class="footer-p">© 2020 Built by uxliz</p>
+        <p class="footer-p mt-1">© 2020 Built by uxliz</p>
         </div>
       </div>
     </footer>
