revised page content

--- a/monotype.html
+++ b/monotype.html
@@ -46,14 +46,44 @@
           </div>
           <div class="row mt-5 pt-5">
             <div class="col-10">
-              <h3>Goal</h3>
-              <p>Evaluate interface design, discover customer journeys and surface service insights for a multi-million dollar SaaS product</p>
+              <h3>Research Topic</h3>
+              <p>Font management service</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
-              <h3>Outcome</h3>
-              <p>Collaborated with design to fix interfaces usability issues, delivered insights highlight reel, and facilitated a service deisgn workshop which brought together internal stakholders to develop an internal service blueprint.</p>
+              <h3>People</h3>
+              <p>Business administrators managing font files for their company & Monotype employees providing a font management service to business administrators.</p>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col-10">
+              <h3>Business Admin Research Question</h3>
+              <p>How do business administrators find a font managament service?</p>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col-10">
+              <h3>Monotype Employee Research Question</h3>
+              <p>How can monotype employees (Design, Sales, Marketing, Customer Serivce) make a better font management solution?</p>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col-10">
+              <h3>Problem Statement</h3>
+              <p>This research evaluated monotype's font management service from two angles--the potential customer and the internal employee.</p>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col-10">
+              <h3>Research Outcome</h3>
+              <p>A redesigned interface built to meet business admins management needs. A service blueprint built by monotype employees that identifies service opportunities for service improvement. An action plan developed by monotype employees that takes advantage of new service opportunities.</p>
+            </div>
+            <div class="w-100">
+            </div>
+            <div class="col-10">
+              <h3>Research Process</h3>
+              <p>This research evaluated monotype's font management service from two angles--the potential customer and the internal employee by speaking with and observing the behavior of its customers and employees.</p>
             </div>
           </div>
         </div>
