added page content

--- a/baby-bracket.html
+++ b/baby-bracket.html
@@ -40,50 +40,44 @@
         <div class="container mono-hero-container offset-2">
           <div class="row mt-5 pt-5  ">
             <div class="col-10 ">
-              <h1 class="mono-h1">MONOTYPE</h1>
-              <h2 class="mono-h2">Customer Discovery & Service Design</h2>
+              <h1 class="mono-h1">BABY BRACKET</h1>
+              <h2 class="mono-h2">Customer Discovery & Product Design</h2>
             </div>
           </div>
           <div class="row mt-5 pt-5">
             <div class="col-10">
               <h3>Research Topic</h3>
-              <p>Font management service</p>
+              <p>Baby naming product</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>People</h3>
-              <p></p>
+              <p>Anyone thinking about baby names</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Research Question</h3>
-              <p>How do </p>
-            </div>
-            <div class="w-100">
-            </div>
-            <div class="col-10">
-              <h3>Research Question</h3>
-              <p>How can </p>
+              <p>How do people select a name for their baby?</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Problem Statement</h3>
-              <p>This research </p>
+              <p>This research describes the jouney people take when selecting a baby name.</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Research Outcome</h3>
-              <p></p>
+              <p>An iOS MVP for a Baby naming app called 'Baby Bracket'</p>
             </div>
             <div class="w-100">
             </div>
             <div class="col-10">
               <h3>Research Process</h3>
-              <p>This research ... by...</p>
+              <p>This research describes the journey people take when selecting a baby name by surveying and interviewing potential and new parents. This research also evaluated the in-app journey people take when using Baby Bracket to create a list of baby names through multiple rounds of usability testing.</p>
             </div>
           </div>
         </div>
