added cutgroup project, added links to project pages

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="card-body">
                 <h3 class="card-title">MONOTYPE</h3>
                 <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
-                <a href="index.html" class="btn" tabindex="0">Font more?</a>
+                <a href="monotype.html" class="btn" tabindex="0">Font more?</a>
               </div>
               <div class="card-footer mt-2">
                 <span class="badge badge-pill badge-light">Service Design</span>
@@ -115,7 +115,7 @@
               <div class="card-body">
                 <h3 class="card-title">BABY BRACKET</h3>
                 <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
-                <a href="#" class="btn">Meet our baby</a>
+                <a href="baby-bracket.html" class="btn">Meet our baby</a>
               </div>
               <div class="card-footer mt-2">
                 <span class="badge badge-pill badge-light">UX Research</span>
@@ -125,6 +125,25 @@
                 <span class="badge badge-pill badge-light">User Interviews</span>
                 <span class="badge badge-pill badge-light">Customer Journeys</span>
                 <span class="badge badge-pill badge-light">Surveys</span>
+              </div>
+            </div>
+          </div>
+          <!-- CUTGroup column -->
+          <div class="col-10 w-100 mt-5">
+            <!-- cutgroup card -->
+            <div class="card">
+              <div class="card-body">
+                <h3 class="card-title">CUTGroup</h3>
+                <p class="card-text">A rapid user testing program</p>
+                <a href="cutgroup.html" class="btn">Cut to chase</a>
+              </div>
+              <div class="card-footer mt-2">
+                <span class="badge badge-pill badge-light">UX Research</span>
+                <span class="badge badge-pill badge-light">User testing</span>
+                <span class="badge badge-pill badge-light">Mobile Apps</span>
+                <span class="badge badge-pill badge-light">Voice Apps</span>
+                <span class="badge badge-pill badge-light">Websites</span>
+                <span class="badge badge-pill badge-light">Civic Program</span>
               </div>
             </div>
           </div>
