--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <!-- logotype -->
           <div class="logotype col-2" >
             <a href="index.html" tabindex="0">
+              <!-- !ALERT ADD ALT TEXT! -->
               <img class="logotype-img" src="images\logotype.PNG" alt="">
             </a>
           </div>
@@ -37,40 +38,91 @@
           </div>
         </div>
         <!-- NAV END -->
-        <!-- ABOUT -->
-        <div class="row mt-5 pt-5">
-          <div class="col-8 col-lg-4 about-container offset-2">
-            <h1 class="about-h1 mb-4">
-            Hello.
-            </h1>
-            <h2 class="about-h2 mb-4">
-              I'm Liz - a user experience researcher who specializes in product design, service design, and UX consulting.
-            </h2>
-            <p class="about-p">
-              I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents.
+        <!-- HERO -->
+        <div class="row mt-5 offset-1">
+          <div class="col-11 about-container">
+            <h1>Hi, I'm Liz.</h1>
+            <p class="about-p mt-3 mb-5">
+              A mixed-methods UX Researcher with two years of combined experience from industry, university, and freelancing. I have a background in experimental psych research, retail management, and a few other things.
             </p>
-            <p class="about-p">
-              When I'm not researching or consulting, I'm sipping water and watching soap operas.
-            </p>
-            <p class="about-p">
-              Wanna chat? Email me at
-              <a href="mailto:liz.alma.brown@gmail.com?subject=I want to connect!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com
-              </a>
+            <p class="offset-8">Thanks for stopping by.
             </p>
           </div>
-          <!-- hero image -->
-          <div class="col-8 col-lg-4 offset-2 offset-lg-0">
-            <img class="about-img"src="images\image.JPG" alt="">
+
+        </div>
+        <!-- HERO END -->
+        <!-- EXP -->
+        <div class="row mt-5 offset-1">
+          <div class="col-11 mb-3">
+            <h2>Experience</h2>
+          </div>
+          <!-- Today col -->
+          <div class="col-3">
+            <p>Today</p>
+          </div>
+          <div class="col 8">
+            <p>UX Researcher</p>
+            <p>Open to new research opportunities</p>
+          </div>
+          <div class="w-100">
+          </div>
+          <!-- 2019-2020 col -->
+          <div class="col-3">
+            <p>2019 - 2020</p>
+          </div>
+          <div class="col 8">
+            <p>UX Researcher & Consultant</p>
+            <p>Open to new research opportunities</p>
+          </div>
+          <div class="w-100">
+          </div>
+          <!-- 2019 col -->
+          <div class="col-3">
+            <p>2019</p>
+          </div>
+          <div class="col 8">
+            <p>UX Researcher Intern</p>
+            <p>Open to new research opportunities</p>
+          </div>
+          <div class="w-100">
+          </div>
+          <!-- 2nd 2019-2020 col -->
+          <div class="col-3">
+            <p>2019 - 2020</p>
+          </div>
+          <div class="col 8">
+            <p>Program Facilitator</p>
+            <p>Open to new research opportunities</p>
+          </div>
+          <div class="w-100">
+          </div>
+          <!-- 2018-2020 col -->
+          <div class="col-3">
+            <p>2018 - 2020</p>
+          </div>
+          <div class="col 8">
+            <p>Graduate Student</p>
+            <p>Open to new research opportunities</p>
+          </div>
+          <div class="w-100">
+          </div>
+          <!-- Back in the Day col -->
+          <div class="col-3">
+            <p>Back in the Day</p>
+          </div>
+          <div class="col 8">
+            <p>UX Researcher</p>
+            <p>Open to new research opportunities</p>
           </div>
         </div>
-        <!-- ABOUT END -->
+        <!-- EXP END -->
         <!-- WORK -->
-        <div class="row mt-5 offset-2">
-          <div class="col-10">
+        <div class="row mt-5 offset-1">
+          <div class="col-11 mb-3">
             <h2>Work</h2>
           </div>
           <!-- Monotype column -->
-          <div class="col-10 w-100 mt-1">
+          <div class="col-5 mt-1">
             <!-- monotype card -->
             <div class="card">
               <div class="card-body">
@@ -90,7 +142,7 @@
             </div>
           </div>
           <!-- Makeaton column -->
-          <div class="col-10 w-100 mt-5">
+          <div class="col-5 mt-1">
             <!-- makeathon card -->
             <div class="card">
               <div class="card-body">
@@ -109,7 +161,7 @@
             </div>
           </div>
           <!-- Babybracket column -->
-          <div class="col-10 w-100 mt-5">
+          <div class="col-5 mt-5">
             <!-- babybracket card -->
             <div class="card">
               <div class="card-body">
@@ -129,7 +181,7 @@
             </div>
           </div>
           <!-- CUTGroup column -->
-          <div class="col-10 w-100 mt-5">
+          <div class="col-5 mt-5">
             <!-- cutgroup card -->
             <div class="card">
               <div class="card-body">
@@ -149,38 +201,44 @@
           </div>
         </div>
         <!-- WORK END -->
-        <!-- STUDY -->
-        <div class="row mt-5 offset-2 study-text">
-          <div class="col-12 study-tex">
-            <h2>
-              Study
-            </h2>
-          </div>
-          <div class="w-100">
-          </div>
-          <div class="col-10">
-            <p>
-              M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020<br>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014
+        <!-- ABOUT -->
+        <div class="row mt-5 pt-5 offset-1">
+          <div class="col-11 about-container">
+            <!-- hero image -->
+            <h1>About</h1>
+            <img class="about-img"src="images\image.JPG" alt="">
+            <p class="about-p mt-3 mb-4">
+              I believe in ego-less research. I don't think I'm any smarter than anyone else. My goal when researching is to discover the truth, not confirm it. I believe in equality between people. Logic before emotions and emotions before logic. <br><br>
+              I don't mind messiness or imperfection. As Angela Davis once said, when speaking about the world's complexity,  <a href="https://www.youtube.com/watch?v=S0jf8D5WHoo&feature=youtu.be&t=2490" target="_blank" target="_blank">"The social world always exceeds our ability to fully comprehend it."</a>
+              <br><br>
+              A few years ago, I traded in perfect-ion-ism for perfect-enough-ism. By no longer striving for perfection, I find peace in my work, accomplish more, and stress less.
+              <br><br>
+              I enjoy working with people who like sharing ideas and opinions. I don't believe in things designed by one person. If you didn't get help, you didn't design.
+              <br><br>
+              Being a UX researcher doesn't define me, but it does inspire me. Everyday I try to get a little better, a littler wiser, a little more empathic, and a little more grateful.
+              <br><br>
+              When you're ready to connect, send something my way at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
             </p>
           </div>
+
         </div>
-        <!-- STUDY END -->
-        <!-- TLDR -->
-        <div class="row mt-5 offset-2">
-          <div class="col-12">
-            <h2>
-              TL;DR
-            </h2>
-          </div>
-          <div class="w-100">
-          </div>
-          <div class="col-10">
-            <p>
-              I'm a UX researcher who builds enjoyable digital experiences.
+        <!-- ABOUT END -->
+        <!-- tl;dr -->
+        <div class="row mt-5 offset-1">
+          <div class="col-11 about-container">
+            <!-- hero image -->
+            <h2>tl;dr</h2>
+            <p class="about-p mt-3 mb-5">
+              Thinker, Collaborator, People Nerd.
+              <br><br>
+              Born and raised in Richmond, Virginia by two parents and one sister.
+              <br><br>
+              At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading psych today articles, writing one screenplay over and over again, listening to Amy Winehouse, or playing tennis.
             </p>
           </div>
+
         </div>
-        <!-- TLDR END -->
+        <!-- tl;dr END -->
         <!-- CONTAINER END -->
       </div>
     </main>
