changed order of nav, added left and right padding to cols, added working nav links

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <!-- nav -->
           <div class="col-nav-links col-2 offset-8">
             <div class=""tabindex="0">
-              <a class="main-nav-link" href="index.html ">ABOUT</a>
+              <a class="main-nav-link" href="#work">WORK</a>
             </div>
             <div class=""tabindex="0">
-              <a class="main-nav-link" href="all-projects.html">WORK</a>
+              <a class="main-nav-link" href="#about">ABOUT</a>
             </div>
             <div class=""tabindex="0">
               <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
@@ -39,7 +39,7 @@
         </div>
         <!-- NAV END -->
         <!-- HERO -->
-        <div class="row mt-5 offset-1">
+        <div class="row mt-5 pl-3 pr-3 offset-1">
           <div class="col-11 about-container">
             <h1>Hi, I'm Liz.</h1>
             <p class="about-p mt-3 mb-5">
@@ -52,7 +52,7 @@
         </div>
         <!-- HERO END -->
         <!-- EXP -->
-        <div class="row mt-5 offset-1">
+        <div class="row mt-5 pl-3 pr-3 offset-1">
           <div class="col-11 mb-3">
             <h2>Experience</h2>
           </div>
@@ -117,7 +117,7 @@
         </div>
         <!-- EXP END -->
         <!-- WORK -->
-        <div class="row mt-5 offset-1">
+        <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
           <div class="col-11 mb-3">
             <h2>Work</h2>
           </div>
@@ -202,7 +202,7 @@
         </div>
         <!-- WORK END -->
         <!-- ABOUT -->
-        <div class="row mt-5 pt-5 offset-1">
+        <div class="row mt-5 pt-5 pl-3 pr-3 offset-1" id="about">
           <div class="col-11 about-container">
             <!-- hero image -->
             <h1>About</h1>
@@ -224,7 +224,7 @@
         </div>
         <!-- ABOUT END -->
         <!-- tl;dr -->
-        <div class="row mt-5 offset-1">
+        <div class="row mt-5 pl-3 pr-3 offset-1">
           <div class="col-11 about-container">
             <!-- hero image -->
             <h2>tl;dr</h2>
