changed nav links, removed resume and work sections

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <!-- nav -->
           <div class="col-nav-links col-2 offset-8">
             <div class=""tabindex="0">
-              <a class="main-nav-link" href="#work">WORK</a>
+              <a class="main-nav-link" href="work.html">WORK</a>
             </div>
             <div class=""tabindex="0">
-              <a class="main-nav-link" href="#about">ABOUT</a>
+              <a class="main-nav-link" href="index.html">ABOUT</a>
             </div>
             <div class=""tabindex="0">
               <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
