--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="logotype col-2" >
             <a href="index.html" tabindex="0">
               <!-- !ALERT ADD ALT TEXT! -->
-              <img class="logotype-img" src="images\logotype.PNG" alt="">
+              <img class="logotype-img" src="images\logotype.png" alt="">
             </a>
           </div>
           <!-- nav -->
@@ -33,7 +33,7 @@
               <a class="main-nav-link" href="index.html">ABOUT</a>
             </div>
             <div class=""tabindex="0">
-              <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
+              <a class="main-nav-link" href="resume.html" target="_blank" >RESUME</a>
             </div>
           </div>
         </div>
