--- a/work.html
+++ b/work.html
@@ -9,35 +9,21 @@
     <link rel="stylesheet" href="css\custom.css">
     <script src="https://kit.fontawesome.com/bb7ea3d4ab.js" crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $(function(){
+          $('#nav').load('reusenav.html');
+      });
+    </script>
   </head>
   <body>
     <!-- MAIN -->
     <main>
       <!--CONTAINER -->
       <div class="container-fulid main-container">
-        <!-- NAV -->
-        <div class="row main-nav">
-          <!-- logotype -->
-          <div class="logotype col-2" >
-            <a href="index.html" tabindex="0">
-              <!-- !ALERT ADD ALT TEXT! -->
-              <img class="logotype-img" src="images\logotype.png" alt="">
-            </a>
-          </div>
-          <!-- nav -->
-          <div class="col-nav-links col-2 offset-8">
-            <div class=""tabindex="0">
-              <a class="main-nav-link" href="work.html">WORK</a>
-            </div>
-            <div class=""tabindex="0">
-              <a class="main-nav-link" href="index.html">ABOUT</a>
-            </div>
-            <div class=""tabindex="0">
-              <a class="main-nav-link" href="resume.html" target="_blank" >RESUME</a>
-            </div>
-          </div>
+        <div id="nav">
+
         </div>
-        <!-- NAV END -->
         <!-- WORK -->
         <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
           <div class="col-11 mb-3">
@@ -141,8 +127,7 @@
     </footer>
     <!-- END OF FOOTER -->
     <!-- SCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
